--- a/img/index.html
+++ b/img/index.html
@@ -25,7 +25,7 @@
                 <label for="phone">Ваш <span>телефон</span></label>
                 <div class="phone__info">
                     <input class="input" type="phone" placeholder="+7 (123) 456 78-90">
-                    <select class="closed" id="1">
+                    <select id="">
                         <option value="1">Пункт 1</option>
                         <option value="2">Пункт 2</option>
                         <option value="3">Пункт 3</option>
@@ -35,7 +35,7 @@
                         <div class="select__header">
                             <span class="select__current">RU</span>
                             <img class="flag" src="img/image7.svg" alt="flag" width="26px" height="18px">
-                            <img src="img/Polygon1.svg" alt="down" class="select__icon" width="8px" height="4px">
+                            <img src="img/Polygon1.svg" alt="down" class="select__icon">
                         </div>
                         <div class="select__body">
                             <div class="select__item">
